making wii domain

--- a/index.html
+++ b/index.html
@@ -1,42 +1,12 @@
-<html><!-- InstanceBegin template="/Templates/housemoonsprinter-modern.dwt" codeOutsideHTMLIsLocked="true" -->
+<html><!-- InstanceBegin template="/Templates/housemoonsprinter-wii.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
-
 <!-- InstanceBeginEditable name="pagetitle" -->
-<title>Aw crap, I got lazy.</title>
-<!-- InstanceEndEditable -->
-<meta name="description" content="Cartoons, games and other rubbish from the whimsical world of Housemoon Sprinter!">
-<meta name="keywords" content="housemoon, sprinter, cartoon, ruffle, flash">
-<meta name="author" content="Radofin Ltd.">
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-0MENKLJZHW"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  
-  gtag('config', 'G-0MENKLJZHW');
-</script><script>
-if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini|Chrome|Chromium/i.test(navigator.userAgent)){
-  const script = document.createElement("script");
-  script.src = "https://unpkg.com/@ruffle-rs/ruffle";
-  document.head.appendChild(script);
-}
-if(/Nintendo Wii/i.test(navigator.userAgent)){
-window.location.replace("http://wii.housemoonsprinter.co.uk/");
-}
-</script>
-<!-- InstanceBeginEditable name="extrascripts" -->
+<title>The Wiiness will come...</title>
 <!-- InstanceEndEditable -->
 </head>
 <body bgcolor="#004400">
-<!-- InstanceBeginEditable name="toonembed" -->
-<center><object data="housecastmenu-warning.swf" width="550" height="400" type="application/x-shockwave-flash"><img src="noflash-main.png" width="550" height="400"></object></center>
-<!-- InstanceEndEditable -->
-<!-- InstanceBeginEditable name="navembed" -->
-<!-- no need to edit unless scaling is weird, in which case it's pretty bloody necessary-->
-<center><object data="navigator-externalsite.swf" width="550" height="10" type="application/x-shockwave-flash"><img name="n00000001" src="noflash-navbar.png" width="550" height="10" id="n00000001" usemap="#m_00000001" alt="" /><map name="m_00000001" id="m_00000001">
-<area shape="poly" coords="303,0,325,0,325,10,303,10,303,0" href="https://archive.org/details/flashplayer_old" target="_blank" alt=""/>
-<area shape="poly" coords="271,0,294,0,294,10,271,10,271,0" href="https://ruffle.rs/#downloads" target="_blank" alt=""/></object></center>
+<!-- InstanceBeginEditable name="mainembed" -->
+<center><embed src="holdingpage.swf" width="550" height="400"></embed></center>
 <!-- InstanceEndEditable -->
 </body>
 <!-- InstanceEnd --></html>
